components/2-tier-todo-app/kustomize/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  labels:
    app.kubernetes.io/name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todo-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: quay.io/rh-ee-kamirsar/2-tier-to-do-app:frontend-0.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: todo-frontend
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /health
              port: todo-frontend
            failureThreshold: 12
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: todo-frontend
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: todo-frontend
            initialDelaySeconds: 15
            periodSeconds: 20
