components/2-tier-todo-app/kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
  labels:
    app: todo-frontend
spec:
  selector:
    app: todo-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
