components/2-tier-todo-app/kustomize/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-frontend
  labels:
    app: todo-frontend
spec:
  to:
    kind: Service
    name: todo-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
